# TRUST

./: README.md  record.md
.github/workflows/: sync.yml
diy_version/: Test.cpp  run.sh
diy_version/include/: fastPai.h  offline.h  protocol.h
linux_version/Final_TRUST_socket/: CMakeLists.txt  CP.cpp  CSP.cpp  Client.cpp  run.sh
linux_version/Final_TRUST_socket/include/: fastPai.h
local_version/Baseline/: CMakeLists.txt  Plain_Test_Fish.cpp  Plain_Test_Fish_double.cpp  Plain_Test_Student.cpp  run.sh
local_version/Baseline/Data/Fish/: Fish_100.csv  Fish_rounded.csv  test_dataset_fish.csv  train_dataset_fish.csv
local_version/POCF_C++/: Test  Test.cpp  run.sh
local_version/POCF_C++/include/: pcpd.h  pocf.h
local_version/POCF_C++/output/: test_1018_10_43_01_1.txt  test_1018_10_43_01_2.txt  test_1018_10_43_01_3.txt
local_version/SDTE/C++/: CMakeLists.txt  Cipher_Test.cpp  run.sh
local_version/SEAT_C++/: CMakeLists.txt  Cipher_Test.cpp  run.sh
local_version/SEAT_C++/include/: fastPai.h  offline.h  protocol.h
local_version/SOCI+_C++/: Test.cpp
local_version/SOCI+_C++/include/: fastPai.h  offline.h  protocol.h
local_version/SOCI_C++/: Test  Test.cpp
local_version/SOCI_C++/include/: paillier.h  soci.h
local_version/TRUST_C++/include/: fastPai.h
local_version/TRUST_c++/: CMakeLists.txt  Test.cpp
sgx_version/SEAT_SGX/: CP_output.txt  run.sh
sgx_version/TRUST_SGX/: CP_output.txt  Makefile  run.sh
simple_version/TRUST_C++/: Test.cpp
socket_version/POCF_socket/: CP  CP.cpp  CP_output.txt  CSP  CSP.cpp  Client  Client.cpp
socket_version/SOCI+_socket/: CP  CP.cpp  CP_output.txt  CSP  Client
socket_version/SOCI_socket/: CP  CP.cpp  CP_output.txt  CSP  CSP.cpp  Client  Client.cpp  README.md
socket_version/soci_plus_socket/: CP  CSP.cpp  Client.cpp  build.sh
window_version/Final_TRUST_socket/: CMakeLists.txt  CP.cpp  CSP.cpp  Client.cpp
window_version/Final_TRUST_socket/Data/: window_version - 快捷方式.lnk
window_version/Final_TRUST_socket/include/: cp_protocol.h  csp_protocol.h  fastPai.h  network.h  offline.h
window_version/Final_TRUST_socket_v2/: CP.cpp  CSP.cpp  Client.cpp
(+46 files in other folders)
